--- a/landing.html
+++ b/landing.html
@@ -12,8 +12,7 @@
   <!-- Connect to Font Awesome CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-  <!-- Connect to our own additional CSS -->
-  <link rel="stylesheet" href="assets/additional_styles.css">
+
 
   <!-- Connect to jQuery (required before Bootstrap Javascript) -->
   <script src="assets/jquery-2.2.2.min.js"></script>
@@ -24,12 +23,14 @@
   <!-- These meta tags make Bootstrap responsive and more accessible -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Connect to our own additional CSS -->
+  <link rel="stylesheet" href="assets/additional_styles.css">
 
   <!-- Connect to Google Web Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,300italic,400italic,600italic,700italic,800,800italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default navbar-fixed-top blue_nav">
     <div class="container">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1">
@@ -41,7 +42,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand " href="#">
               <i class="fa fa-lg fa-fw fa-dropbox"></i>
               Filebox
             </a>
@@ -52,7 +53,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li>
                 <p class="navbar-btn">
-                  <a href="#" class="btn btn-link">
+                  <a href="#" class="blue_nav btn btn-link">
                     Download the app
                   </a>
                 </p>
@@ -60,7 +61,7 @@
 
               <li>
                 <p class="navbar-btn">
-                  <a href="#" class="btn btn-link">
+                  <a href="#" class="blue_nav btn btn-link">
                     Sign in
                   </a>
                 </p>
@@ -68,7 +69,7 @@
 
               <li>
                 <p class="navbar-btn">
-                  <a href="#" class="btn btn-default">
+                  <a href="#" class="blue_nav btn btn-default ">
                     Try Filebox Business
                   </a>
                 </p>
