--- a/landing.html
+++ b/landing.html
@@ -284,7 +284,7 @@
       </div>
 
     <div class="row padding-inside-top-md padding-inside-bottom-lg">
-
+      <footer>
       <div class="col-lg-2">
         <h4>Filebox</h4>
 
@@ -348,7 +348,7 @@
           <li>Enterprise</li>
         </ul>
       </div>
-
+    </footer>
     </div>
 
   </div> <!-- container -->
